2007-09-28 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (find_device): prevent buffer underflow error
	* src/pic/pcoderegs.c (OptimizeRegUsage): avoid dereferencing
	  the just destroyed list entry

2007-09-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: there's a dedicated wiki page for cmake and sdcc, thanks
	  Alexander Neundorf

2007-09-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c: fixed MSVC warning C4146: unary minus operator
	 applied to unsigned type, result still unsigned

2007-09-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y, src/SDCCast.c, src/SDCCcse.c, src/SDCCglue.c,
	  src/SDCCicode.c, src/SDCCopt.c, src/SDCCsymt.c, src/SDCCval.c,
	  src/SDCCval.h, src/hc08/gen.c, src/avr/gen.c, src/ds390/gen.c,
	  src/mcs51/gen.c, src/pic/gen.c, src/pic/genarith.c, src/pic/glue.c,
	  src/pic/ralloc.c, src/pic16/gen.c, src/pic16/genarith.c,
	  src/pic16/genutils.c, src/pic16/glue.c, src/pic16/main.c,
	  src/z80/gen.c, src/z80/ralloc.c:
	  fixed bug #1739860 - sdcc does not work correctly on some platforms
	  (not finished)
	  introduced and used ulFromVal(), double2ul(), used strtod() instead sscanf()

2007-09-17 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c: reverted to previous version
	* device/lib/pic16/Makefile.common.in: quieten gpasm via -Wa,-q

2007-09-16 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c (pic16_dump_usection): do not reserve 0 bytes,
	  as this raises a ton of gpasm warnings, just emit a second label
	* src/pic16/devices.inc,
	* device/lib/pic16/pics.all,
	* device/lib/pic16/libdev/pic18f2585.c,
	* device/lib/pic16/libdev/pic18f2680.c,
	* device/lib/pic16/libdev/pic18f2682.c,
	* device/lib/pic16/libdev/pic18f2685.c,
	* device/lib/pic16/libdev/pic18f4585.c,
	* device/lib/pic16/libdev/pic18f4680.c,
	* device/lib/pic16/libdev/pic18f4682.c,
	* device/lib/pic16/libdev/pic18f4685.c,
	* device/include/pic16/pic18f2585.h,
	* device/include/pic16/pic18f2680.h,